@@ -4,3 +4,4 @@ release notes databene commons 0.5.15
 Enhancements
 ------------
 - IOUtil: New methods isFileUri(String uri) and stripOffProtocolFromUri(String uri)
+- BeanUtil: getClasses() filters out inner classes
